# spotdl-plus

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  build.py  pyproject.toml
.github/workflows/: tests.yml
releases/1.0.0/: SHA256SUMS.txt  build-info.txt
releases/1.1.0/: SHA256SUMS.txt  build-info.txt
releases/1.1.1/: SHA256SUMS.txt  build-info.txt
releases/1.1.2/: SHA256SUMS.txt  build-info.txt
releases/1.1.3/: SHA256SUMS.txt  build-info.txt
releases/1.1.4/: SHA256SUMS.txt  build-info.txt
releases/1.1.5/: SHA256SUMS.txt  build-info.txt
releases/1.1.6/: SHA256SUMS.txt  build-info.txt
releases/1.1.7/: SHA256SUMS.txt  build-info.txt
releases/1.1.8/: SHA256SUMS.txt  build-info.txt
releases/1.2.0/: SHA256SUMS.txt  build-info.txt
releases/1.2.2/: SHA256SUMS.txt  build-info.txt
src/spotdlplus/: __init__.py
src/spotdlplus/cli/: __init__.py  _win.py  main.py  render.py  setup.py
src/spotdlplus/core/: __init__.py  backoff.py  config.py  engine.py  errors.py  events.py  models.py  runtime.py  store.py  works.py
src/spotdlplus/match/: __init__.py  matcher.py  score.py  search.py
src/spotdlplus/media/: __init__.py  covers.py  fetch.py  fingerprint.py  lyrics.py  place.py  tag.py  transcode.py
src/spotdlplus/net/: __init__.py  auth.py  breaker.py  http.py  probe.py  ratelimit.py  spotify_pathfinder.py  spotify_web.py  ytenv.py
src/spotdlplus/pipeline/: __init__.py  audit.py  expand.py  export.py  genres.py  ingest.py  resolve.py  run.py  selection.py  stages.py
src/spotdlplus/providers/: __init__.py  acoustid.py  factory.py  musicbrainz.py  spotify.py  spotify_web.py
tests/: conftest.py  test_architecture.py  test_audit.py  test_audit_fixes.py  test_cli_reference.py  test_cookies.py  test_custodian.py  test_delivery.py  test_digest.py  test_engine.py  test_error_codes.py  test_expand.py  test_export.py  test_fingerprint.py  test_healing.py  test_http.py  test_ingest.py  test_instruments.py  test_matcher.py  test_media.py  test_musicbrainz.py  test_net.py  test_provider_factory.py  test_relink.py  test_render.py  test_resilience.py  test_resolve.py  test_shared_output_dir.py  test_song_itself.py  test_spine.py  test_spotify_pathfinder.py  test_spotify_web.py  test_spotify_web_parse.py  test_spotify_web_provider.py  test_sync.py  test_vault_option.py  test_works.py
tests/fixtures/pathfinder/: artist_discography_radiohead.json  artist_overview_radiohead.json  get_album_okcomputer.json  get_track_airbag.json  playlist_tophits.json  search_creep.json
