[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'

[project]
name = 'spotdlplus'
version = '1.2.2'
description = 'A music archival pipeline that remembers what it was doing.'
readme = 'README.md'
requires-python = '>=3.11'
# GPL because mutagen is GPL-2.0-or-later and we IMPORT it, and the bundled ffmpeg
# is GPL-3.0. That's arithmetic, not a preference. See THIRD-PARTY-NOTICES.md.
license = 'GPL-3.0-or-later'
license-files = ['LICENSE']
authors = [{ name = 'Kai Watts', email = 'kaiwatts06@gmail.com' }]
keywords = ['music', 'spotify', 'archival', 'downloader', 'ipod', 'metadata']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: End Users/Desktop',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Multimedia :: Sound/Audio',
]

dependencies = [
    # No spotipy. It ships its own session, retry loop, and token cache, all of
    # which route around our rate limiter, circuit breaker, and single-flight
    # refresh -- and let the 401 storm back in through a side door.
    'httpx>=0.27',          # the one HTTP client, with real timeouts
    'truststore>=0.9',      # verify against the OS trust store, not a bundled CA list
    'yt-dlp>=2025.1.1',     # audio acquisition. pinned floor, probed at runtime
    'mutagen>=1.47',        # id3 / vorbis / mp4 tag embedding
    'rapidfuzz>=3.9',       # string distance for the matcher
    'rich>=13.7',           # the cli renderer. core never imports this
    'typer>=0.12',          # command surface
]

[project.optional-dependencies]
dev = [
    'pytest>=8.0',
    'pytest-cov>=5.0',
    'ruff>=0.6',
    'pyinstaller>=6.0',   # `python build.py` freezes the app for shipping
]

[project.scripts]
'spotdl+' = 'spotdlplus.cli.main:main'
spotdlp = 'spotdlplus.cli.main:main'

# Table headers go BELOW every plain key in [project]. A table swallows
# everything after it, and putting this above `dependencies` once turned the
# dependency list into `project.urls.dependencies`. Fun error message.
[project.urls]
Homepage = 'https://github.com/Golden-Atlas/spotdl-plus'
Source = 'https://github.com/Golden-Atlas/spotdl-plus'
Issues = 'https://github.com/Golden-Atlas/spotdl-plus/issues'
Changelog = 'https://github.com/Golden-Atlas/spotdl-plus/blob/main/CHANGELOG.md'

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = '-q'

[tool.ruff]
line-length = 100
src = ['src']

[tool.ruff.lint]
ignore = []
